improved user badge

--- a/ChickenTinder/ChickenTinder/Client/Pages/Swipe.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/Swipe.razor
@@ -1,6 +1,10 @@
 ﻿@page "/swipe/{Id}/join/{UserId}"
 @page "/swipe"
+@inject ServerConnection server
 
+<div class="header-right">
+    <UserBadge User="server.CurrentUser"></UserBadge>
+</div>
 <SwipeList>
 </SwipeList>
 @code {
