--- a/ChickenTinder/ChickenTinder/Client/Shared/SwipeList.razor
+++ b/ChickenTinder/ChickenTinder/Client/Shared/SwipeList.razor
@@ -4,7 +4,7 @@
 @inject NavigationManager nav
 <div class="tinder">
     <div class="tinder--status">
-        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-heart"></i>
         <i class="fa-solid fa-thumbs-up"></i>
         <i class="fa-solid fa-arrow-rotate-left"></i>
         <i class="fa-solid fa-thumbs-down"></i>
@@ -21,7 +21,7 @@
     </div>
 
     <div class="tinder--buttons">
-        <button id="love">      <i class="fa-solid fa-star"></i></button>
+        <button id="love">      <i class="fa-solid fa-heart"></i></button>
         <button id="like">      <i class="fa-solid fa-thumbs-up"></i></button>
         <button id="dislike">   <i class="fa-solid fa-arrow-rotate-left"></i></button>
         <button id="nope">      <i class="fa-solid fa-thumbs-down"></i></button>
