--- a/ChickenTinder/ChickenTinder/Client/Shared/Rating.razor
+++ b/ChickenTinder/ChickenTinder/Client/Shared/Rating.razor
@@ -1,7 +1,7 @@
 ﻿
 @for (int i = 0; i < 5; i++)
 {
-    if(Value >= i)
+    if(Value >= i+1)
     {
         <i class="fa-solid fa-star checked" style="padding: 0px"></i>
     }
@@ -10,7 +10,6 @@
         <i class="fa-solid fa-star" style="padding: 0px"></i>
     }
 }
-
 @code {
     [Parameter]
     public float Value { get; set; }
