--- a/ChickenTinder/ChickenTinder/Client/Pages/Index.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/Index.razor
@@ -3,28 +3,37 @@
 @inject NavigationManager nav
 @inject ServerConnection _server;
 
-
-<div class="center-all">
-    <img src="/icon-192.png" style="margin-top: 20px" />
-</div>
-<h1 class="center-all" style="margin-top: 50px">Chicken Tinder</h1>
-<p class="center-all">Find Single Restaurants Near You</p>
-
-<div class="footer">
+@if (!_isLoading)
+{
     <div class="center-all">
-        <p style="margin: 0px">Host or Enter Code</p>
+        <img src="/icon-192.png" style="margin-top: 20px" />
     </div>
-    <div class="center-all">
-        <input class="textbox" type="number" placeholder="Code" value="@Code" @oninput="e => Code = e.Value?.ToString()"/>
-    </div>
-    <div class="center-bottom">
-        <button class="btn" @onclick="Join">@JoinText</button>
+    <h1 class="center-all" style="margin-top: 50px">Chicken Tinder</h1>
+    <p class="center-all">Find Single Restaurants Near You</p>
 
+    <div class="footer">
+        <div class="center-all">
+            <p style="margin: 0px">Host or Enter Code</p>
+        </div>
+        <div class="center-all">
+            <input class="textbox" type="number" placeholder="Code" value="@Code" @oninput="e => Code = e.Value?.ToString()" />
+        </div>
+        <div class="center-bottom">
+            <button class="btn" @onclick="Join">@JoinText</button>
+
+        </div>
     </div>
-</div>
+}
+else
+{
+    <div id="spinner">
+        <img src="/icon-192.png" />
+    </div>
+}
 
 
 @code {
+    private bool _isLoading = false;
     private string? _code;
     public string? Code
     {
@@ -46,6 +55,9 @@
 
     public async void Join()
     {
+        _isLoading = true;
+        StateHasChanged();
+
         if (string.IsNullOrWhiteSpace(Code))
         {
             await _server.CreateRoom();
@@ -54,6 +66,8 @@
         {
             await _server.JoinRoom(int.Parse(Code));
         }
+        _isLoading = false;
+        StateHasChanged();
 
         //create the room...
         nav.NavigateTo("/room");
