Leave room when there is match

--- a/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
@@ -73,6 +73,8 @@ else
             WinningRestaurant = Room.WinningRestaurant;
             RestaurantName = Room.WinningRestaurant.Name;
         }
+
+        await ServerConnection.LeaveRoom();
     }
 
     private void GetDirections()
