added header to pages

--- a/ChickenTinder/ChickenTinder/Client/Pages/Swipe.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/Swipe.razor
@@ -1,10 +1,7 @@
 ﻿@page "/swipe/{Id}/join/{UserId}"
 @page "/swipe"
 @inject ServerConnection server
-
-<div class="header-right">
-    <UserBadge User="server.CurrentUser"></UserBadge>
-</div>
+<HeaderView></HeaderView>
 <SwipeList>
 </SwipeList>
 @code {
