--- a/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
@@ -5,7 +5,7 @@
 @inject ServerConnection ServerConnection
 @inject NavigationManager NavMan
 @inject InterloopService _interloopService;
-
+<HeaderView></HeaderView>
 @*<div class="pyro">
   <div class="before"></div>
     <Card Restaurant="Room?.WinningRestaurant" />
