--- a/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
@@ -5,6 +5,8 @@
 @inject ServerConnection ServerConnection
 @inject NavigationManager NavMan
 @inject InterloopService _interloopService;
+@inject IJSRuntime _js;
+
 <HeaderView></HeaderView>
 @*<div class="pyro">
   <div class="before"></div>
@@ -63,6 +65,15 @@ else
     private DiningRoom? Room { get; set; }
     private Restaurant? WinningRestaurant { get; set; }
     private string RestaurantName { get; set; } = "";
+
+    protected async override void OnAfterRender(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await _js.InvokeVoidAsync("Fireworks.confetti");
+            StateHasChanged();
+        }
+    }
 
     protected override async Task OnInitializedAsync()
     {
