Fixed match bug

--- a/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
@@ -69,12 +69,11 @@ else
         Room = await ServerConnection.GetRoom(RoomID);
         if (Room != null && Room?.WinningRestaurant != null)
         {
-            Room = ServerConnection.Room;
             WinningRestaurant = Room.WinningRestaurant;
             RestaurantName = Room.WinningRestaurant.Name;
         }
 
-        await ServerConnection.LeaveRoom();
+        //await ServerConnection.LeaveRoom();
     }
 
     private void GetDirections()
