Open directions and Yelp in new tab

--- a/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
@@ -96,7 +96,6 @@ else
 
     private void GoToYelp()
     {
-        string myUrl = $"https://www.yelp.com/map/{WinningRestaurant.Alias}";
-        NavMan.NavigateTo(myUrl);
+        _= _js.InvokeAsync<object>("open", $"https://www.yelp.com/map/{WinningRestaurant.Alias}", "_blank");
     }
 }
