--- a/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
@@ -70,16 +70,19 @@ else
     private string RestaurantName { get; set; } = "";
     public List<Match> Matches { get; set; } = new List<Match>();
 
-    public string GetUserClass(string? classList) => classList + " fa-2xl";
-
-    public string GetActionClass(UserAction aciton)
+    public string GetUserClass(string? classList)
     {
-        return aciton switch
+        return classList + " fa-2xl";
+    }
+
+    public string GetActionClass(UserAction action)
+    {
+        return action switch
         {
             UserAction.Like => "fa-solid fa-thumbs-up pe-3",
-            UserAction.Dislike => "fa-solid fa-arrow-rotate-left pe-3",
+            UserAction.Maybe => "fa-solid fa-arrow-rotate-left pe-3",
             UserAction.No => string.Empty,
-            UserAction.Yes => "fa-solid fa-heart pe-3",
+            UserAction.Love => "fa-solid fa-heart pe-3",
             _ => throw new Exception("IMPOSSIBLE")
         };
     }
