--- a/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
@@ -14,6 +14,8 @@
   <div class="after"></div>
 </div>*@
 
+<div id="confetti"></div>
+
 @if (WinningRestaurant == null)
 {
     <div class="alert alert-info text-center fa-2xl" role="alert">
