--- a/ChickenTinder/ChickenTinder/Client/Shared/Card.razor
+++ b/ChickenTinder/ChickenTinder/Client/Shared/Card.razor
@@ -22,5 +22,5 @@
 </div>
 @code {
     [Parameter]
-    public Restaurant Restaurant { get; set; }
+    public Restaurant Restaurant { get; set; } = new Restaurant();
 }
