--- a/ChickenTinder/ChickenTinder/Client/Shared/HeaderView.razor
+++ b/ChickenTinder/ChickenTinder/Client/Shared/HeaderView.razor
@@ -1,7 +1,7 @@
 ﻿@inject ServerConnection server
 @inject NavigationManager nav 
 <div class="header-right">
-    <UserBadge User="@server.CurrentUser" Width="64"></UserBadge>
+    <UserBadge User="@server.User" Width="64"></UserBadge>
 </div>
 <div class="header-left">
     <a @onclick="Home"><img src="icon-96.png" width="64" height="64"/></a> 
