--- a/ChickenTinder/ChickenTinder/Client/Shared/UserBadge.razor.css
+++ b/ChickenTinder/ChickenTinder/Client/Shared/UserBadge.razor.css
@@ -23,3 +23,10 @@
 .user-container {
     display: table
 }
+
+@media screen and (max-width: 420px) {
+    .user-badge {
+        min-width: 150px;
+        width: 100%;
+    }
+  }
