--- a/ChickenTinder/ChickenTinder/Client/Shared/UserBadge.razor
+++ b/ChickenTinder/ChickenTinder/Client/Shared/UserBadge.razor
@@ -5,7 +5,7 @@
         <i style="@GetStyle(User.Color ?? throw new Exception())" class="@GetClass(@User.Class)"></i>
         @if (ShowName)
         {
-            <div style="display: table-cell; padding: 5px"></div>
+            <div style="display: table-cell; width: 5px"></div>
             <p class="user-badge">
                 @User.Name
                 @if (IsYou)
