--- a/ChickenTinder/ChickenTinder/Client/Shared/UserBadge.razor.css
+++ b/ChickenTinder/ChickenTinder/Client/Shared/UserBadge.razor.css
@@ -1,5 +1,4 @@
 ﻿.user-badge {
-    min-width: 300px;
     padding: 10px;
     border-radius: 5px;
     font-size: 20px;
@@ -20,13 +19,19 @@
     text-align: center;
 }
 
-.user-container {
-    display: table
+
+
+@media screen and (min-width: 420px) {
+
+    .user-container {
+        display: table;
+        width: 60%;
+    }
 }
 
 @media screen and (max-width: 420px) {
-    .user-badge {
-        min-width: 150px;
+    .user-container {
+        display: table;
         width: 100%;
     }
-  }
+}
