--- a/ChickenTinder/ChickenTinder/Client/Pages/Room.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/Room.razor
@@ -27,7 +27,7 @@
             }
             else
             {
-                <button disabled class="btn" @onclick="() => server.Start()">Start</button>
+                <button disabled class="btn" @onclick="() => server.Start()">Waiting for others...</button>
             }
         </div>
     }
