--- a/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
@@ -18,9 +18,7 @@
 
 @if (WinningRestaurant == null)
 {
-    <div class="alert alert-info text-center fa-2xl" role="alert">
-        Hang on, we are getting your restaurant ready... <i class="fa-solid fa-thumbs-up"></i>
-    </div>
+    <Spinner/>
 }
 else
 {
