improved match service

--- a/ChickenTinder/ChickenTinder/Client/Shared/SwipeList.razor
+++ b/ChickenTinder/ChickenTinder/Client/Shared/SwipeList.razor
@@ -82,7 +82,7 @@
             await interop.Start();
     }
 
-    public void Matched(string id = "")
+    public void Matched()
     {
         if (server.Room == null)
             throw new Exception("");
